--- a/Csharp K winform/Csharp K winform.csproj
+++ b/Csharp K winform/Csharp K winform.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="detailInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="detailInfo.Designer.cs">
+      <DependentUpon>detailInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="detailInfo.resx">
+      <DependentUpon>detailInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
